Fix popup width too narrow

--- a/popup/popup.css
+++ b/popup/popup.css
@@ -1,13 +1,9 @@
 * {
   box-sizing: border-box;
 }
-html{
-  width: 300px;
-  max-width: 100vw;
-}
+
 body {
   width: 300px;
-  height: 300px;
   margin: 0;
   background: #efeffa;
   color: #222;
